@@ -12,7 +12,6 @@
  */
 package org.openhab.binding.avmfritz.internal.dto.templates;
 
-import java.util.Collections;
 import java.util.List;
 
 import javax.xml.bind.annotation.XmlAccessType;
@@ -34,7 +33,7 @@ public class DeviceListModel {
 
     public List<DeviceModel> getDevices() {
         if (devices == null) {
-            devices = Collections.emptyList();
+            devices = List.of();
         }
         return devices;
     }
